Closed Bug 57802 Opened 25 years ago Closed 19 years ago

Mailto: links with 'body' [Send Link from Firefox] fail to attach/insert signature in composition

Categories

(MailNews Core :: Composition, defect, P3)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: bjwhite, Assigned: ian.mitchell)

References

(Blocks 1 open bug, )

Details

(Keywords: verified1.8.1)

Attachments

(2 files)

No description provided.
bjwhite@usa.com, please take a look at the bug writing guidelines. http://www.mozilla.org/quality/bug-writing-guidelines.html Worksforme on Mozilla trunk builds linux 110308 RedHat 6.2 win32 110304 NT 4 mac 110308 Mac OS9
Status: UNCONFIRMED → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
marking verified using the 2001010310 nightly on win2k.
Status: RESOLVED → VERIFIED
I think the signature is missing when the body-parameter of the "mailto:" URL/link isn't empty. It doesn't seem to depend on a special address or other parameter values AFAIK. This URL results in a missing signature on my system: mailto:roslawski@buildingagency.com?body=Hi%20Chris The signature is present for these URLs on my system: mailto:roslawski@buildingagency.com?body= mailto:roslawski@buildingagency.com?subject=Hi%20Chris mailto:roslawski@buildingagency.com I'm not sure if the missing signature is a wanted security feature or not. My Netscape 4.78 adds the signature even when a body-text is given by the mailto-link. And this would be the preferred behaviour for me. ;-) Thanks for listening. - Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.2a) Gecko/20020910 - Mozilla Mail is default mailer - Windows 2000 SP2
Not sure how this was tested but it still is an issue. The links above have not been correctly created. trying: mailto:roslawski@buildingagency.com?body=test
including this attachment to test the problem since bugzilla refuses to...
I too would prefer a signature file on any new composition by default. Cheers :)
Inserting the test URL into the URL field -- this will allow the problem to manifest by clicking on the URL link. Reopening. Problem reproduced with Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a3) Gecko/20040824
URL: mailto:roslawski@buildingagency.com?b...
Status: VERIFIED → UNCONFIRMED
Resolution: WORKSFORME → ---
Summary: Mailto: links fail to attach/insert signature in composition → Mailto: links with 'body' fail to attach/insert signature in composition
*** Bug 234699 has been marked as a duplicate of this bug. ***
marking New
Status: UNCONFIRMED → NEW
Ever confirmed: true
Product: MailNews → Core
*** Bug 273634 has been marked as a duplicate of this bug. ***
*** Bug 274559 has been marked as a duplicate of this bug. ***
Updating summary because the last two dupes were both about using Send Link from Firefox. FF's Send Link works by creating a mailto: with a body parameter equal to the URL.
Summary: Mailto: links with 'body' fail to attach/insert signature in composition → Mailto: links with 'body' [Send Link from Firefox] fail to attach/insert signature in composition
*** Bug 276433 has been marked as a duplicate of this bug. ***
*** Bug 282047 has been marked as a duplicate of this bug. ***
*** Bug 307017 has been marked as a duplicate of this bug. ***
*** Bug 346840 has been marked as a duplicate of this bug. ***
This is a very bothering bug and still present in Thunderbird version 2 alpha 1 (20060724). I can't believe that it's too difficult to fix. Will we have the chance to get this into Thunderbird 2.0?
Flags: blocking-thunderbird2?
five years later and i'm still monitoring this bug :-( there are now seven duplicates of this bug as much as i admire mozilla and their products, what is going on with this bug? why don't we just add a new status of "who cares"
bugs hanging around for a while may be frustrating, but whining about why they aren't fixed is not going to get you very far. If you want the bug fixed, vote for it (which several of you have done I see), dig in and try and fix it yourself, or possibly bribe someone you know who knows how to program.
i see no danger of having a bit of a winge about these old bugs not getting me any where...clearly some of them aren't going to be fixed, no matter what the old "stop whining and fix it yourself" cliche is a cop-out and just indicates further that this bug won't be fixed BTW, i already voted for this bug about 4 year ago i suggest a new status be added that indicates, say after a year or so, that the bug won't be fixed any time soon, so that people know and can either try to find a workaround (which i did) or seriously try to get into fixing it themselves
is a separate patch required for seamonkey?
Attachment #232855 - Flags: review?(ducarroz)
Attachment #232855 - Flags: review?(ducarroz) → review?(neil)
Ian, many thanks for the patch! Cause this bug state hasn't changed for a long time I assign this bug to you. So anyone can see that you are working on.
Assignee: ducarroz → ian.mitchell
Comment on attachment 232855 [details] [diff] [review] always add signature when mailto URL R=ducarroz
Attachment #232855 - Flags: review?(neil) → review+
> is a separate patch required for seamonkey? No, that file is shared back-end code.
Attachment #232855 - Flags: superreview?(neil) → superreview+
Checked in on trunk.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Comment on attachment 232855 [details] [diff] [review] always add signature when mailto URL Trivial patch which shouldn't be a risk for 1.8.1 and a lot of people will be glad to see it in Thunderbird 2.0
Attachment #232855 - Flags: approval1.8.1?
Comment on attachment 232855 [details] [diff] [review] always add signature when mailto URL Scott, you cool with this?
Attachment #232855 - Flags: approval1.8.1? → approval-thunderbird2?
Verified with Thunderbird version 3 alpha 1 (20060820) Just a small nit: The signature is added directly under the link. Wouldn't it be better to have an blank line between them?
Status: RESOLVED → VERIFIED
Haven't heard of that being an issue but if so it might need to be a separate bug. And then I'd be happy to take it on :-)
(In reply to comment #28) > Verified with Thunderbird version 3 alpha 1 (20060820) > > Just a small nit: The signature is added directly under the link. Wouldn't it > be better to have an blank line between them? That might be an issue with the text as actually sent from Firefox -- if it doesn't have a newline at the end of it, the normal 'extra' newline before the sig becomes the only newline before the sig. Same thing if you click the URL link above; whereas this: mailto:roslawski@buildingagency.com?body=test%0d%0a gives the expected result.
Comment on attachment 232855 [details] [diff] [review] always add signature when mailto URL we'll take this for thunderbird 2.
Attachment #232855 - Flags: approval-thunderbird2? → approval-thunderbird2+
not going to block but I approved the patch.
Flags: blocking-thunderbird2? → blocking-thunderbird2-
Ian, do you care to look at Bug 349645.
I'm not actually seeing this as a bug. I prefer there to be no extra white space between the body and the signature, there is already a spacer with the -- Or have I missed the point?
(In reply to comment #35) > I'm not actually seeing this as a bug. I prefer there to be no extra white > space between the body and the signature, there is already a spacer with the -- > > Or have I missed the point? Can we discuss that on bug 349645? Meanwhile this one could be checked in.
Whiteboard: [checkin needed]
I'm don't have access to checkin. I would prefer not to!
Whiteboard: [checkin needed] → [checkin needed (1.8 branch)]
QA Contact: esther → composition
mozilla/mailnews/compose/src/nsMsgCompose.cpp 1.460.2.23
Keywords: fixed1.8.1
OS: Windows 2000 → All
Hardware: PC → All
Whiteboard: [checkin needed (1.8 branch)]
Target Milestone: --- → mozilla1.8.1
V fixed on branch w/ 2b1-1018.
Product: Core → MailNews Core
Blocks: 545859
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: