Bug 57802: missing signature if mailto: link has body; p=Ian Mitchell <ian.mitchell@utas.edu.au>, r=ducarroz, sr=neil